--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ DB_CONNECTION=mysql
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_DATABASE="puzzle_main"
-DB_USERNAME="puzzle_main"
-DB_PASSWORD="#rMBm+;s*G~l"
+DB_USERNAME="root"
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
